--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <script src="index.js"></script>
 <body>
     <div>Hello world!</div>
+    <div>
+        <button type="button">Click me!</button>
+    </div>
 </body>
 
 </html>
